# Simple-DIP

./: CMakeLists.txt  README.md  main.c  main.cpp
Simple-DIP_Linux/: main.c
Simple-DIP_Linux/src/: image.c  image.h
src/: image.c  image.h  utils.h
